# advai-cli

./: .gitignore  .npmignore  HOMEBREW_CORE.md  LICENSE  README.md  install.sh  package.json  pyproject.toml
.github/workflows/: ci.yml  homebrew-core-prep.yml  release.yml
Formula/: advai-cli.rb  advai.rb
advai/: ai_client.py  browser_bridge.py  browser_daemon.py  cli.py  cli_manager.py  kb.py  skill_platforms.py  skills.py  tui.py
advai/skill_sources/: __init__.py  base.py  github.py  registry.py  skills_sh.py
scripts/: prepare_homebrew_formula.py
tests/: test_ai_client.py  test_browser_bridge.py  test_browser_daemon.py  test_homebrew_formula.py  test_metadata.py  test_skill_platforms.py  test_tui.py
