[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "advai-cli"
version = "1.0.2"
description = "Cross-platform AI Skill manager"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [{ name = "advai" }]
dependencies = [
    "click>=8.1",
]

[project.scripts]
advai = "advai.cli:cli"

[tool.setuptools]
packages = ["advai"]
