[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "advai-cli"
version = "1.0.9"
description = "CLI for browser automation, skills, and external CLIs."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "advai" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
]
dependencies = [
    "aiohttp>=3.9",
    "click>=8.1",
]

[project.urls]
Homepage = "https://github.com/Advai-X/advai-cli"
Repository = "https://github.com/Advai-X/advai-cli"
Issues = "https://github.com/Advai-X/advai-cli/issues"

[project.scripts]
advai = "advai.cli:cli"

[tool.setuptools]
packages = ["advai", "advai.skill_sources"]
